--- a/build.gradle
+++ b/build.gradle
@@ -14,12 +14,12 @@ apply plugin: 'com.jfrog.bintray'
 apply plugin: 'com.github.dcendents.android-maven'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.3"
 
     defaultConfig {
-        minSdkVersion 19
-        targetSdkVersion 22
+        minSdkVersion 21
+        targetSdkVersion 25
         versionCode 3
         versionName '0.1-SNAPSHOT'
     }
@@ -72,10 +72,10 @@ repositories {
 
 dependencies {
     compile 'com.empatica:empalink:2.1@aar'
+    compile 'com.android.support:appcompat-v7:25.3.1'
 
-    // needed to work with testCompile -> kafka-clients
     compile 'com.squareup.okhttp:okhttp:2.5.0'
-    compile 'org.radarcns:radar-commons-android:0.1'
+    compile 'org.radarcns:radar-commons-android:0.2'
     compile 'org.radarcns:radar-schemas-commons:0.1'
 
     testCompile 'junit:junit:4.12'
