--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 25
-        versionCode 5
-        versionName '0.2-SNAPSHOT'
+        versionCode 6
+        versionName '0.1.1'
     }
     buildTypes {
         release {
