--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 25
-        versionCode 6
-        versionName '0.1.1'
+        versionCode 7
+        versionName '0.1.2-SNAPSHOT'
     }
     buildTypes {
         release {
