--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,40 @@
+/*
+ * Copyright 2017 The Hyve
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
+        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.5.4'
     }
 }
 
 apply plugin: 'com.android.library'
 apply plugin: 'com.jfrog.bintray'
 apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.jfrog.artifactory'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "27.0.1"
+    buildToolsVersion '27.0.1'
 
     defaultConfig {
         minSdkVersion 21
@@ -23,23 +42,23 @@ android {
         versionCode 7
         versionName '0.1.2-SNAPSHOT'
     }
+    lintOptions {
+        abortOnError false
+    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-
-            libraryVariants.all { variant ->
-                variant.outputs.each { output ->
-                    if (output.outputFile != null && output.outputFile.name.endsWith('.aar')) {
-                        output.outputFile = new File(output.outputFile.parent,
-                                "${archivesBaseName}-${android.defaultConfig.versionName}.aar")
-                    }
-                }
-            }
         }
     }
-    lintOptions {
-        abortOnError false
+    libraryVariants.all { variant ->
+        variant.outputs.all {
+            if (variant.name == 'release') {
+                outputFileName = "${archivesBaseName}-${android.defaultConfig.versionName}.aar"
+            } else {
+                outputFileName = "${archivesBaseName}-${android.defaultConfig.versionName}-${variant.name}.aar"
+            }
+        }
     }
     packagingOptions {
         exclude 'META-INF/ASL2.0'
@@ -53,7 +72,7 @@ android {
 
 group = 'org.radarcns'
 ext.moduleName = 'radar-android-empatica'
-ext.description = 'Empatica E4 plugin for RADAR passive remote monitoring app'
+ext.moduleDescription = 'Empatica E4 plugin for RADAR passive remote monitoring app'
 ext.githubRepoName = 'RADAR-CNS/radar-android-empatica'
 version = android.defaultConfig.versionName
 
@@ -71,20 +90,20 @@ configurations.compile {
 
 repositories {
     jcenter()
-    maven { url 'https://maven.google.com' }
+    google()
     maven { url 'https://oss.jfrog.org/artifactory/oss-snapshot-local' }
     flatDir { dirs 'libs' }
 }
 
 dependencies {
-    compile 'com.empatica:empalink:2.1@aar'
+    api 'org.radarcns:radar-commons-android:0.6'
+    implementation 'org.radarcns:radar-schemas-commons:0.2.3'
 
-    compile 'com.squareup.okhttp:okhttp:2.5.0'
-    compile 'org.radarcns:radar-commons-android:0.4'
-    compile 'org.radarcns:radar-schemas-commons:0.2.2'
+    implementation 'com.empatica:empalink:2.1@aar'
+    runtimeOnly 'com.squareup.okhttp:okhttp:2.5.0'
 
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.slf4j:slf4j-simple:1.7.25'
+    testImplementation 'junit:junit:4.12'
+    testRuntimeOnly 'org.slf4j:slf4j-simple:1.7.25'
 }
 
 //---------------------------------------------------------------------------//
@@ -104,8 +123,14 @@ task sourcesJar(type: Jar) {
 
 task javadoc(type: Javadoc) {
     source = android.sourceSets.main.java.srcDirs
-    classpath += configurations.compile
+    android.libraryVariants.all { variant ->
+        if (variant.name == 'release') {
+            owner.classpath += variant.javaCompiler.classpath
+        }
+    }
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    exclude '**/R.java'
+    exclude '**/BuildConfig.java'
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
@@ -188,7 +213,7 @@ bintray {
         repo = project.group
         name = moduleName
         userOrg = 'radar-cns'
-        desc = description
+        desc = moduleDescription
         licenses = ['Apache-2.0']
         websiteUrl = website
         issueTrackerUrl = issueUrl
@@ -197,7 +222,7 @@ bintray {
         githubReleaseNotesFile = 'README.md'
         version {
             name = project.version
-            desc = description
+            desc = moduleDescription
             vcsTag = System.getenv('TRAVIS_TAG')
             released = new Date()
             gpg {
@@ -207,7 +232,26 @@ bintray {
     }
 }
 
+bintrayUpload.dependsOn 'assembleRelease'
+
+artifactory {
+    contextUrl = 'https://oss.jfrog.org/artifactory'
+    publish {
+        repository {
+            repoKey = 'oss-snapshot-local'
+            username = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
+            password = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
+            maven = true
+        }
+    }
+}
+
+artifactoryPublish {
+    publishConfigs 'archives'
+    dependsOn 'assembleRelease'
+}
+
 task wrapper(type: Wrapper) {
-    gradleVersion = '4.1'
+    gradleVersion = '4.4'
     distributionType 'all'
 }
