--- a/build.gradle
+++ b/build.gradle
@@ -15,12 +15,14 @@
  */
 
 buildscript {
+    ext.kotlin_version = '1.3.10'
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
         classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.8.1'
         classpath 'digital.wup:android-maven-publish:3.6.1'
@@ -28,6 +30,7 @@ buildscript {
 }
 
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 apply plugin: 'com.jfrog.bintray'
 apply plugin: 'com.jfrog.artifactory'
 apply plugin: 'maven-publish'
@@ -69,6 +72,9 @@ android {
         targetCompatibility 1.8
         sourceCompatibility 1.8
     }
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
 }
 
 //---------------------------------------------------------------------------//
@@ -96,13 +102,15 @@ configurations.compile {
 repositories {
     google()
     jcenter()
-    maven { url 'https://oss.jfrog.org/artifactory/oss-snapshot-local' }
+    mavenCentral()
+//      maven { url 'https://oss.jfrog.org/artifactory/oss-snapshot-local' }
     flatDir { dirs 'libs' }
 }
 
 dependencies {
-    api 'org.radarcns:radar-commons-android:0.8.3'
+    api 'org.radarcns:radar-commons-android:0.8.4'
     implementation 'org.radarcns:radar-schemas-commons:0.4.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     implementation 'com.empatica:empalink:2.2@aar'
     runtimeOnly 'com.squareup.okhttp:okhttp:2.5.0'
@@ -113,6 +121,17 @@ dependencies {
 
 tasks.withType(JavaCompile) {
     options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+        apiVersion = '1.3'
+        languageVersion = '1.3'
+    }
 }
 
 //---------------------------------------------------------------------------//
@@ -131,7 +150,6 @@ task sourcesJar(type: Jar) {
 }
 
 task javadoc(type: Javadoc) {
-    source = android.sourceSets.main.java.srcDirs
     android.libraryVariants.all { variant ->
         if (variant.name == 'release') {
             owner.classpath += variant.javaCompiler.classpath
