--- a/build.gradle
+++ b/build.gradle
@@ -43,8 +43,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 7
-        versionName '0.2.0'
+        versionCode 8
+        versionName '0.2.1-SNAPSHOT'
     }
     lintOptions {
         abortOnError false
