--- a/build.gradle
+++ b/build.gradle
@@ -15,17 +15,17 @@
  */
 
 buildscript {
-    ext.kotlin_version = '1.3.10'
+    ext.kotlin_version = '1.3.21'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
-        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.8.1'
-        classpath 'digital.wup:android-maven-publish:3.6.1'
+        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.9.1'
+        classpath 'digital.wup:android-maven-publish:3.6.2'
     }
 }
 
@@ -69,8 +69,8 @@ android {
         exclude 'META-INF/LICENSE'
     }
     compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
     }
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -82,14 +82,13 @@ android {
 //---------------------------------------------------------------------------//
 
 group = 'org.radarcns'
-ext.moduleName = 'radar-android-empatica'
-ext.moduleDescription = 'Empatica E4 plugin for RADAR passive remote monitoring app'
-ext.githubRepoName = 'RADAR-CNS/radar-android-empatica'
+description = 'Empatica E4 plugin for RADAR passive remote monitoring app'
 version = android.defaultConfig.versionName
+ext.githubRepoName = 'RADAR-base/radar-android-empatica'
 
 ext.githubUrl = 'https://github.com/' + githubRepoName + '.git'
 ext.issueUrl = 'https://github.com/' + githubRepoName + '/issues'
-ext.website = 'http://radar-cns.org'
+ext.website = 'http://radar-base.org'
 
 //---------------------------------------------------------------------------//
 // Sources and classpath configurations                                      //
@@ -102,21 +101,21 @@ configurations.compile {
 repositories {
     google()
     jcenter()
-    mavenCentral()
-//      maven { url 'https://oss.jfrog.org/artifactory/oss-snapshot-local' }
+    mavenLocal()
+    maven { url 'https://oss.jfrog.org/artifactory/oss-snapshot-local' }
     flatDir { dirs 'libs' }
 }
 
 dependencies {
-    api 'org.radarcns:radar-commons-android:0.8.4'
-    implementation 'org.radarcns:radar-schemas-commons:0.4.1'
+    api 'org.radarbase:radar-commons-android:0.10.0-SNAPSHOT'
+    implementation 'org.radarcns:radar-schemas-commons:0.4.3'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     implementation 'com.empatica:empalink:2.2@aar'
     runtimeOnly 'com.squareup.okhttp:okhttp:2.5.0'
 
     testImplementation 'junit:junit:4.12'
-    testRuntimeOnly 'org.slf4j:slf4j-simple:1.7.25'
+    testRuntimeOnly 'org.slf4j:slf4j-simple:1.7.26'
 }
 
 tasks.withType(JavaCompile) {
@@ -139,12 +138,12 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 //---------------------------------------------------------------------------//
 
 ext.sharedManifest = manifest {
-    attributes("Implementation-Title": moduleName,
+    attributes("Implementation-Title": project.name,
             "Implementation-Version": version)
 }
 
 task sourcesJar(type: Jar) {
-    classifier = 'sources'
+    archiveClassifier.set('sources')
     from android.sourceSets.main.java.srcDirs
     manifest.from sharedManifest
 }
@@ -152,7 +151,7 @@ task sourcesJar(type: Jar) {
 task javadoc(type: Javadoc) {
     android.libraryVariants.all { variant ->
         if (variant.name == 'release') {
-            owner.classpath += variant.javaCompiler.classpath
+            owner.classpath += variant.javaCompileProvider.get().classpath
         }
     }
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
@@ -161,7 +160,7 @@ task javadoc(type: Javadoc) {
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
+    archiveClassifier.set('javadoc')
     from javadoc.destinationDir
     manifest.from sharedManifest
 }
@@ -174,7 +173,7 @@ publishing {
             artifact javadocJar
 
             pom {
-                description = moduleDescription
+                description = project.description
                 licenses {
                     license {
                         name = 'The Apache Software License, Version 2.0'
@@ -215,15 +214,15 @@ publishing {
 }
 
 bintray {
-    user project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
-    key project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
-    override false
+    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
+    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
+    override = false
     publications 'mavenAar'
     pkg {
         repo = project.group
-        name = moduleName
+        name = project.name
         userOrg = 'radar-cns'
-        desc = moduleDescription
+        desc = project.description
         licenses = ['Apache-2.0']
         websiteUrl = website
         issueTrackerUrl = issueUrl
@@ -232,7 +231,7 @@ bintray {
         githubReleaseNotesFile = 'README.md'
         version {
             name = project.version
-            desc = moduleDescription
+            desc = project.description
             vcsTag = System.getenv('TRAVIS_TAG')
             released = new Date()
             gpg {
@@ -265,5 +264,5 @@ artifactory {
 artifactoryPublish.dependsOn 'assembleRelease'
 
 wrapper {
-    gradleVersion '4.10.2'
+    gradleVersion '5.2.1'
 }
